# Grassator

./: .gitignore  CHANGELOG.md  LICENSE-AGPL  LICENSE-MIT  cspell.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uno.config.ts  vite.config.ts
.changeset/: chilled-ghosts-attack.md  cool-cooks-call.md  early-papayas-melt.md  eighty-wolves-pretend.md  fair-terms-act.md  fifty-rabbits-draw.md  hip-sheep-rest.md  honest-camels-shout.md  itchy-lobsters-laugh.md  khaki-turtles-beg.md  olive-ways-clean.md  wet-apricots-chew.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  docs.yml  release.yml
docs/: index.md
docs/.vitepress/: config.ts  en.ts  shared.ts  zh.ts
docs/zh/: index.md
scripts/: bump.mjs  release.mjs
src/: App.vue  main.ts
src-tauri/: CHANGELOG.md  Cargo.toml  package.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs  types.rs  utils.rs
src/components/: VerticalMenu.vue
src/router/: index.ts
src/scripts/: config.ts
src/types/: config.ts  error.ts  index.ts  utils.ts
src/views/: index.vue
