[package]
name = "grassator"
version = "0.1.2"
description = "Secure, fast multi-process downloader"
authors = ["苏向夜 <fu050409@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "grassator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["parking_lot", "sync"] }
parking_lot = "0.12.3"
toml = "0.8.15"
bytes = "1.6.1"
